k8s/archived/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: bp-bedrock-service
spec:
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
