k8s/archived/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: bp-bedrock-service
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
