k8s/archived/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bp-bedrock-service-ingress
  namespace: bp-bedrock-service
spec:
  ingressClassName: nginx
  rules:
  - host: bp.bedrock.service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
